<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">

            <item android:id="@+id/menu"
                android:checked="true"
                android:icon="@drawable/ic_client"
                android:title="@string/my_account" />
            <item android:id="@+id/extract"
                android:icon="@drawable/ic_coin"
                android:title="@string/extract"/>
            <item android:id="@+id/transference"
                android:icon="@drawable/ic_transfer"
                android:title="@string/transfer"/>
    </group>
    <group
        android:id="@+id/menu_middle"
        android:checkableBehavior="none">
        <item android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings">
        </item>
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout">
        </item>
    </group>

</menu>