<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".menu.transference.TransferenceActivity">

    <include
        layout="@layout/custom_toolbar"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/toolbar_dropshadow"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/para_quem_voc_quer_enviar"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <EditText
                android:layout_marginTop="8dp"
                app:backgroundTint="@color/colorText"
                android:paddingTop="20dp"
                android:layout_marginStart="-3dp"
                android:paddingBottom="20dp"
                android:id="@+id/etTransference_UserTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />

            <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quanto_voc_deseja_enviar"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <EditText
                android:layout_marginTop="8dp"
                app:backgroundTint="@color/colorText"
                android:paddingTop="20dp"
                android:layout_marginStart="-3dp"
                android:paddingBottom="20dp"
                android:id="@+id/etTransference_Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/value"
                android:inputType="number"
                android:importantForAutofill="no" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center|bottom">

                <Button
                    android:id="@+id/btnTransference_Send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="@color/colorGreen"
                    android:layout_marginTop="32dp"
                    android:textSize="18sp"
                    android:background="@drawable/custom_button_continue"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
